// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`This is for the Add Questions Should render Add Question Properly 1`] = `
<<<<<<< HEAD
<AddQ>
  <AddQ__AQC>
    <div
      className="AddQ__AQC-fu61ov-1 bKyMVa"
    >
      <AddQ__AddAQ
        onClick={[Function]}
        type="submit"
      >
        <button
          className="AddQ__AddAQ-fu61ov-0 dzUWvS"
          onClick={[Function]}
          type="submit"
        >
          ADD A QUESTION +
        </button>
      </AddQ__AddAQ>
    </div>
  </AddQ__AQC>
</AddQ>
`;

exports[`This is for the Add Questions Should render More Answers Properly 1`] = `
=======
>>>>>>> 02ee0ec6c214bf9bfe9c4a4496ac203921d04516
<AddQ>
  <AddQ__AQC>
    <div
      className="AddQ__AQC-fu61ov-1 bKyMVa"
    >
      <AddQ__AddAQ
        onClick={[Function]}
        type="submit"
      >
        <button
          className="AddQ__AddAQ-fu61ov-0 dzUWvS"
          onClick={[Function]}
          type="submit"
        >
          ADD A QUESTION +
        </button>
      </AddQ__AddAQ>
    </div>
  </AddQ__AQC>
</AddQ>
`;
